objects/wktDocumentEDDRelease__c.object
<CustomObject>
    <description>Work table to be used to auto-populate the EDD Release document from the survey, portal, or inside Salesforce.</description>
    <fields>
        <fullName>CongaSolutionURL__c</fullName>
        <formula>&quot;&amp;Id=&quot; + Id + 
&quot;&amp;templateId=a1DV0000000FgiZ&quot; + 
&quot;&amp;DS7=2&quot; + 
&quot;&amp;QMode=1&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CongaSolutionURL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CongaWorkflowTrigger__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CongaWorkflowTrigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DataEndDate__c</fullName>
        <label>Data End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DataStartDate__c</fullName>
        <description>The start date of the period for which we need EDD records.</description>
        <inlineHelpText>The start date of the period for which we need EDD records.</inlineHelpText>
        <label>Data Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EmployeeSurvey__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The survey that the employee took to qualify for the program category that requires this document.</description>
        <inlineHelpText>The survey that the employee took to qualify for the program category that requires this document.</inlineHelpText>
        <label>Employee Survey</label>
        <referenceTo>EmployeeSurvey__c</referenceTo>
        <relationshipName>wktDocumentEDDRelease</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Employment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The employment period that this form relates to.</description>
        <inlineHelpText>The employment period that this form relates to.</inlineHelpText>
        <label>Employment Period</label>
        <referenceTo>Employment__c</referenceTo>
        <relationshipName>wktDocumentEDDRelease</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FirstLastNameFormula__c</fullName>
        <description>Full name of the employee for the document.</description>
        <formula>Employment__r.Employee__r.FirstLastNameFormula__c</formula>
        <inlineHelpText>Full name of the employee for the document.</inlineHelpText>
        <label>Full Name (first-last)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SSNCodeFormula__c</fullName>
        <description>The SSN of the employee, formatted with hyphens.</description>
        <formula>IF(CONTAINS( Employment__r.Employee__r.SSN__c, &apos;*&apos;) ,&apos;&apos;, (LEFT(Employment__r.Employee__r.SSN__c,3) +&quot;-&quot;+ MID(Employment__r.Employee__r.SSN__c, 4, 2) + &quot;-&quot; +  RIGHT(Employment__r.Employee__r.SSN__c, 4) ))</formula>
        <inlineHelpText>The SSN of the employee, formatted with hyphens.</inlineHelpText>
        <label>SSN</label>
        <type>Text</type>
    </fields>
    <label>EDD Release</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>EDD Release Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>EDD Releases</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>